- added sign and align for number. - fixed legend ellipsis.

--- a/src/components/Sections/SectionChart/ChartLegend.less
+++ b/src/components/Sections/SectionChart/ChartLegend.less
@@ -9,7 +9,10 @@
     vertical-align: middle;
     &.horizontal {
       display: inline-block;
-      margin-right: 5px;
+      padding-right: 5px;
+      white-space: nowrap;
+      max-width: 100%;
+      height: 23px;
     }
     .recharts-legend-icon-container {
       display: inline-block;
@@ -31,6 +34,10 @@
       margin-left: 10px;
       &.minimal {
         margin-left: 6px;
+        opacity: 0.7;
+        display: inline-block;
+        float: none;
+        vertical-align: top;
       }
     }
   }
